package com.hust_twj.imageloderlibrary.loader;

import android.graphics.Bitmap;
import android.graphics.BitmapFactory;
import android.util.Log;

import com.hust_twj.imageloderlibrary.utils.CheckUtil;
import com.hust_twj.imageloderlibrary.utils.IOUtil;
import com.hust_twj.imageloderlibrary.task.Request;
import com.hust_twj.imageloderlibrary.utils.ImageDecoder;

import java.io.BufferedInputStream;
import java.io.InputStream;
import java.net.HttpURLConnection;
import java.net.URL;

/**
 * 网络图片加载器
 * Created by Wenjing.Tang on 2019-07-16.
 */
public class NetworkLoadStrategy extends BaseLoadStrategy {

    private static final String TAG = NetworkLoadStrategy.class.getSimpleName();

    @Override
    public Bitmap onLoadImage(Request request) {
        if (CheckUtil.isActivityFinished(request)) {
            return null;
        }
        final String imageUrl = request.uri;
        InputStream inputStream = null;
        Bitmap bitmap = null;
        HttpURLConnection urlConnection = null;
        try {
            URL url = new URL(imageUrl);
            urlConnection = (HttpURLConnection) url.openConnection();
            urlConnection.setConnectTimeout(5 * 1000);
            inputStream = new BufferedInputStream(urlConnection.getInputStream());
            bitmap = BitmapFactory.decodeStream(inputStream, null, null);
        } catch (Exception e) {
            e.printStackTrace();
        } finally {
            if (inputStream != null) {
                IOUtil.close(inputStream);
            }
            if (urlConnection != null) {
                urlConnection.disconnect();
            }
        }
        if (bitmap == null) {
            return null;
        }
        Log.e(TAG, "显示原图：" + request.displayRaw + "  " +
                "原始图片大小：" + bitmap.getWidth() + "*" + bitmap.getHeight() + "  " +
                "处理后图片大小：" +  ImageDecoder.decodeBitmap(bitmap, request.getImageViewWidth(), request.getImageViewHeight()).getWidth() +
                "*" + ImageDecoder.decodeBitmap(bitmap, request.getImageViewWidth(), request.getImageViewHeight()).getHeight());
        if (request.displayRaw) {
            return bitmap;
        }
        return ImageDecoder.decodeBitmap(bitmap, request.getImageViewWidth(), request.getImageViewHeight());
    }

}
